fix: removed gap and cleaned TheaterTimings CSS

--- a/BookMyScreen-Project/src/pages/MovieDetails.css
+++ b/BookMyScreen-Project/src/pages/MovieDetails.css
@@ -59,7 +59,7 @@
 .movie-title {
   font-size: 36px;
   font-weight: bold;
-  color: whitesmoke;
+  color: rgb(187, 183, 183) !important;
 }
 
 /* Rating box */
@@ -181,29 +181,36 @@
 }
 /* About the movie container */
 .about-section {
-
- 
-  backdrop-filter: blur(4px);
-  width: 130%;
- 
+  /*backdrop-filter: blur(4px);*/
+  width: 100%;
+  margin-top: 10px;
 }
 
 /* Title */
 .about-title {
-    padding-left: 0px;
+  /*  padding-left: 0px;
   font-size: 5px;
   font-weight: 200;
   margin-bottom: 5px;
   color: #ffffff;
-  text-shadow: 0 2px 6px rgba(0,0,0,0.8);
+  text-shadow: 0 2px 6px rgba(0,0,0,0.8); */
+ font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: rgb(187, 183, 183) !important;
+  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.8);
+
 }
 
 /* Description text */
 .about-text {
-  font-size: 3px;
+  /*font-size: 3px;
   line-height: 1;
-  color: #d1d1d1;
- 
+  color: #d1d1d1;*/
+
+  font-size: 16px;
+  line-height: 1.6;
+  color: rgb(187, 183, 183) !important;
 }
 
 /* Responsive adjustments */
